--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@project-serum/anchor": "^0.26.0",
+    "@solana/spl-token": "^0.4.12",
+    "@solana/web3.js": "^1.98.0",
     "body-parser": "^1.20.3",
     "bs58": "^6.0.0",
     "cors": "^2.8.5",
