--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,22 @@
 {
   "compilerOptions": {
-    "target": "ES6",
     "module": "commonjs",
-    "rootDir": "./src",
-    "outDir": "./dist",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "strict": true
+    "allowSyntheticDefaultImports": true,
+    "target": "es6",
+    "noImplicitAny": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "node_modules/*",
+        "src/types/*"
+      ]
+    }
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "./src/**/*"
+  ]
 }
