--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist"
   },
-  "pre-commit": [
-    "ts.check",
-    "build",
-    "add-build"
-  ],
+  "config": {
+    "pre-commit": [
+      "ts.check",
+      "build",
+      "add-build"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -39,6 +41,8 @@
     "@types/express": "^5.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^6.0.1",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
