--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.21.2",
     "firebase": "^11.4.0",
     "mongoose": "^8.9.5",
+    "node-schedule": "^2.1.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/node-schedule": "^2.1.7",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "pre-commit": "^1.2.2",
