--- a/src/staking/multiversed_dapp.json
+++ b/src/staking/multiversed_dapp.json
@@ -470,7 +470,7 @@
             "type": {
               "array": [
                 "u8",
-                10
+                32
               ]
             }
           },
@@ -555,7 +555,7 @@
             "type": {
               "array": [
                 "u8",
-                10
+                32
               ]
             }
           },
@@ -603,7 +603,84 @@
       }
     }
   ],
-  "types": [],
+  "types": [
+    {
+      "name": "TournamentError",
+      "type": {
+        "kind": "enum",
+        "variants": [
+          {
+            "name": "InsufficientFunds"
+          },
+          {
+            "name": "TournamentFull"
+          },
+          {
+            "name": "TournamentEnded"
+          },
+          {
+            "name": "TournamentNotActive"
+          },
+          {
+            "name": "AlreadyRegistered"
+          },
+          {
+            "name": "InvalidEntryFee"
+          },
+          {
+            "name": "InvalidMaxParticipants"
+          },
+          {
+            "name": "InvalidEndTime"
+          },
+          {
+            "name": "Unauthorized"
+          },
+          {
+            "name": "InvalidWinnerData"
+          },
+          {
+            "name": "InvalidWinnerPercentages"
+          },
+          {
+            "name": "InvalidPercentages"
+          },
+          {
+            "name": "InvalidTournamentId"
+          },
+          {
+            "name": "MathOverflow"
+          }
+        ]
+      }
+    },
+    {
+      "name": "StakingError",
+      "type": {
+        "kind": "enum",
+        "variants": [
+          {
+            "name": "AlreadyInitialized"
+          },
+          {
+            "name": "InsufficientStakedBalance"
+          },
+          {
+            "name": "Unauthorized"
+          },
+          {
+            "name": "MathOverflow"
+          },
+          {
+            "name": "StakeLockActive"
+          },
+          {
+            "name": "InvalidLockDuration"
+          }
+        ]
+      }
+    }
+  ],
   "errors": [
     {
       "code": 6000,
@@ -667,31 +744,41 @@
     },
     {
       "code": 6012,
+      "name": "InvalidTournamentId",
+      "msg": "Invalid tournament ID."
+    },
+    {
+      "code": 6013,
+      "name": "MathOverflow",
+      "msg": "Math overflow occurred."
+    },
+    {
+      "code": 7000,
       "name": "AlreadyInitialized",
       "msg": "Staking Pool already initialized by this admin"
     },
     {
-      "code": 6013,
+      "code": 7001,
       "name": "InsufficientStakedBalance",
       "msg": "Insufficient staked balance"
     },
     {
-      "code": 6014,
-      "name": "UnauthorizedAccess",
+      "code": 7002,
+      "name": "Unauthorized",
       "msg": "Unauthorized access"
     },
     {
-      "code": 6015,
+      "code": 7003,
       "name": "MathOverflow",
       "msg": "Math overflow occurred"
     },
     {
-      "code": 6016,
+      "code": 7004,
       "name": "StakeLockActive",
       "msg": "Unstaking is locked"
     },
     {
-      "code": 6017,
+      "code": 7005,
       "name": "InvalidLockDuration",
       "msg": "Invalid Lock Duration, Must be 1, 3, 6 or 12 months"
     }
