--- a/src/staking/multiversed_dapp.json
+++ b/src/staking/multiversed_dapp.json
@@ -39,6 +39,67 @@
       "args": []
     },
     {
+      "name": "distributeTournamentPrizes",
+      "accounts": [
+        {
+          "name": "admin",
+          "isMut": true,
+          "isSigner": true
+        },
+        {
+          "name": "tournamentPool",
+          "isMut": false,
+          "isSigner": false
+        },
+        {
+          "name": "prizePool",
+          "isMut": true,
+          "isSigner": false
+        },
+        {
+          "name": "prizeEscrowAccount",
+          "isMut": true,
+          "isSigner": false
+        },
+        {
+          "name": "firstPlaceTokenAccount",
+          "isMut": true,
+          "isSigner": false
+        },
+        {
+          "name": "secondPlaceTokenAccount",
+          "isMut": true,
+          "isSigner": false
+        },
+        {
+          "name": "thirdPlaceTokenAccount",
+          "isMut": true,
+          "isSigner": false
+        },
+        {
+          "name": "mint",
+          "isMut": true,
+          "isSigner": false
+        },
+        {
+          "name": "tokenProgram",
+          "isMut": false,
+          "isSigner": false
+        },
+        {
+          "name": "systemProgram",
+          "isMut": false,
+          "isSigner": false
+        }
+      ],
+      "args": [
+        {
+          "name": "tournamentId",
+          "type": "string"
+        }
+      ]
+    },
+    {
       "name": "stake",
       "accounts": [
         {
@@ -603,84 +664,6 @@
       }
     }
   ],
-  "types": [
-    {
-      "name": "TournamentError",
-      "type": {
-        "kind": "enum",
-        "variants": [
-          {
-            "name": "InsufficientFunds"
-          },
-          {
-            "name": "TournamentFull"
-          },
-          {
-            "name": "TournamentEnded"
-          },
-          {
-            "name": "TournamentNotActive"
-          },
-          {
-            "name": "AlreadyRegistered"
-          },
-          {
-            "name": "InvalidEntryFee"
-          },
-          {
-            "name": "InvalidMaxParticipants"
-          },
-          {
-            "name": "InvalidEndTime"
-          },
-          {
-            "name": "Unauthorized"
-          },
-          {
-            "name": "InvalidWinnerData"
-          },
-          {
-            "name": "InvalidWinnerPercentages"
-          },
-          {
-            "name": "InvalidPercentages"
-          },
-          {
-            "name": "InvalidTournamentId"
-          },
-          {
-            "name": "MathOverflow"
-          }
-        ]
-      }
-    },
-    {
-      "name": "StakingError",
-      "type": {
-        "kind": "enum",
-        "variants": [
-          {
-            "name": "AlreadyInitialized"
-          },
-          {
-            "name": "InsufficientStakedBalance"
-          },
-          {
-            "name": "Unauthorized"
-          },
-          {
-            "name": "MathOverflow"
-          },
-          {
-            "name": "StakeLockActive"
-          },
-          {
-            "name": "InvalidLockDuration"
-          }
-        ]
-      }
-    }
-  ],
   "errors": [
     {
       "code": 6000,
@@ -753,32 +736,37 @@
       "msg": "Math overflow occurred."
     },
     {
-      "code": 7000,
+      "code": 6014,
+      "name": "AlreadyDistributed",
+      "msg": "Prize pool has already been distributed."
+    },
+    {
+      "code": 6015,
       "name": "AlreadyInitialized",
       "msg": "Staking Pool already initialized by this admin"
     },
     {
-      "code": 7001,
+      "code": 6016,
       "name": "InsufficientStakedBalance",
       "msg": "Insufficient staked balance"
     },
     {
-      "code": 7002,
-      "name": "Unauthorized",
+      "code": 6017,
+      "name": "StakingUnauthorized",
       "msg": "Unauthorized access"
     },
     {
-      "code": 7003,
-      "name": "MathOverflow",
+      "code": 6018,
+      "name": "StakingMathOverflow",
       "msg": "Math overflow occurred"
     },
     {
-      "code": 7004,
+      "code": 6019,
       "name": "StakeLockActive",
       "msg": "Unstaking is locked"
     },
     {
-      "code": 7005,
+      "code": 6020,
       "name": "InvalidLockDuration",
       "msg": "Invalid Lock Duration, Must be 1, 3, 6 or 12 months"
     }
