--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@project-serum/anchor": "^0.26.0",
     "@solana/spl-token": "^0.4.12",
     "@solana/web3.js": "^1.98.0",
+    "@types/multer": "^2.0.0",
     "bn.js": "^5.2.1",
     "body-parser": "^1.20.3",
     "bs58": "^6.0.0",
@@ -35,6 +36,7 @@
     "express": "^4.21.2",
     "firebase": "^11.4.0",
     "mongoose": "^8.9.5",
+    "multer": "^2.0.2",
     "node-schedule": "^2.1.1",
     "winston": "^3.17.0"
   },
