--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.896.0",
+    "@aws-sdk/s3-request-presigner": "^3.896.0",
     "@clerk/backend": "^2.12.0",
     "@project-serum/anchor": "^0.26.0",
     "@solana/spl-token": "^0.4.12",
     "@solana/web3.js": "^1.98.0",
-    "@types/multer": "^2.0.0",
     "bn.js": "^5.2.1",
     "body-parser": "^1.20.3",
     "bs58": "^6.0.0",
@@ -45,6 +46,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node-schedule": "^2.1.7",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
