--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev src/server.ts",
     "start": "ts-node src/server.ts",
     "dist": "node dist/server.js",
-    "build": "tsc",
+    "build": "tsc && node scripts/copy-staking-assets.js",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist"
   },
